basics/101-deployment-nginx-scale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: demo-nginx-deployment-scale
  labels:
    app: demo-nginx-scale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx-scale
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-nginx-scale
    spec:
      containers:
      - image: nginx:1.18
        name: nginx-scale
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 1
          requests:
            cpu: 0.5
