basics/101-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: demo-nginx-deployment
  labels:
    app: demo-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-nginx
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      containers:
      - image: nginx:1.18
        name: nginx
        ports:
          - containerPort: 80
