basics/101-deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: demo-redis-deployment
  labels:
    app: demo-redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-redis
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-redis
    spec:
      containers:
      - image: redis:6.0
        name: redis
