basics/101-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-env-usage
spec:
  containers:
  - name: demo-env
    image: nginx
