basics/101-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo-lables-pod1
  labels:
    app: nginx
    app_type: web
    env: dev
    author: shivam
    team: infra
    release-version: "1.18"
    project: demo-lables
    extra: delete-me
spec:
  containers:
  - image: nginx:1.18
    name: nginx
---
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo-lables-pod2
  labels:
    app: redis
    app_type: backend
    env: dev
    author: shivam
    team: infra
    release-version: "6.0"
    project: demo-lables
spec:
  containers:
  - image: redis:6.0
    name: redis
---
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo-lables-pod3
  labels:
    app: nginx
    app_type: web
    env: uat
    author: nginx
    team: ux
    release-version: "1.18"
    project: demo-lables
spec:
  containers:
  - image: nginx:1.18
    name: nginx
