basics/101-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo-pod
spec:
  containers:
  - image: nginx:1.18
    name: nginx
