basics/101-secret-usage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-usage
spec:
  containers:
  - name: demo-secret
    image: redis
  restartPolicy: Never
