basics/101-secret-using-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo-secret-vol
spec:
      containers:
      - name: demo-secret
        image: busybox
        command:
         - bin/sh
         - -c
         - "sleep 5000"
        volumeMounts:
          - mountPath: "/tmp/secret-dir"
            name: secret-vol
            readOnly: true
      volumes:
        - name: secret-vol
          secret:
            secretName: demo-db-secret
