basics/101-troubleshoot-bad-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: demo-bad-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-bad-pod
  template:
    metadata:
      labels:
        app: demo-bad-pod
    spec:
      containers:
      - image: nginx:1.1xx
        name: nginx
