basics/101-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-resource-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-nginx
                port:
                  number: 80
